// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select closes drop on esc 1`] = `
<div
  class="StyledBox-YaZNy eLnczz"
  id="select-drop__select"
  direction="column"
>
  <div
    class="StyledBox-YaZNy cwgCmQ"
    overflow="auto"
    direction="column"
  >
    <div
      class="StyledBox-YaZNy iKIEeP"
      role="menubar"
      tabindex="-1"
      direction="column"
    >
      <button
        class="StyledButton-qbvYY bMFmk"
        tabindex="0"
        role="menuitem"
        type="button"
      >
        <div
          class="StyledBox-YaZNy cHUeZK"
          direction="column"
        >
          <span
            class="StyledText-dmaDlZ gTMzGY"
          >
            one
          </span>
        </div>
      </button>
      <button
        class="StyledButton-qbvYY bMFmk"
        tabindex="0"
        role="menuitem"
        type="button"
      >
        <div
          class="StyledBox-YaZNy cHUeZK"
          direction="column"
        >
          <span
            class="StyledText-dmaDlZ gTMzGY"
          >
            two
          </span>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Select closes drop on esc 2`] = `
"

.eLnczz {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  min-width: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media only screen and (min-width:700px) {
  .gWPVwe {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .bMFmk {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}"
`;

exports[`Select closes drop on esc 3`] = `
<button
  class="StyledButton-qbvYY gWPVwe"
  aria-label="undefined"
  type="button"
>
  <div
    class="StyledBox-YaZNy kgWrYO"
    aria-hidden="true"
    direction="row"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-gOoAsL gCsbgz"
    >
      <input
        type="text"
        class="StyledTextInput-bqUxsy jwHYRf"
        id="select"
        autocomplete="off"
        style="cursor: pointer;"
        tabindex="-1"
        readonly=""
      />
    </div>
    <div
      class="StyledBox-YaZNy fnEUqy"
      direction="column"
    >
      <svg
        class="StyledIcon-hcpUvT fAeuhQ"
        width="24px"
        height="24px"
        viewBox="0 0 24 24"
        version="1.1"
        role="img"
        aria-label="FormDown"
      >
        <polyline
          fill="none"
          stroke="#000"
          stroke-width="2"
          points="18 9 12 15 6 9"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select closes drop on esc 4`] = `
<button
  class="StyledButton-qbvYY gWPVwe"
  aria-label="undefined"
  type="button"
>
  <div
    class="StyledBox-YaZNy kgWrYO"
    aria-hidden="true"
    direction="row"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-gOoAsL gCsbgz"
    >
      <input
        type="text"
        class="StyledTextInput-bqUxsy jwHYRf"
        id="select"
        autocomplete="off"
        style="cursor: pointer;"
        tabindex="-1"
        readonly=""
      />
    </div>
    <div
      class="StyledBox-YaZNy fnEUqy"
      direction="column"
    >
      <svg
        class="StyledIcon-hcpUvT fAeuhQ"
        width="24px"
        height="24px"
        viewBox="0 0 24 24"
        version="1.1"
        role="img"
        aria-label="FormDown"
      >
        <polyline
          fill="none"
          stroke="#000"
          stroke-width="2"
          points="18 9 12 15 6 9"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select mounts 1`] = `
<button
  class="StyledButton-qbvYY gWPVwe"
  aria-label="undefined"
  type="button"
>
  <div
    class="StyledBox-YaZNy kgWrYO"
    aria-hidden="true"
    direction="row"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-gOoAsL gCsbgz"
    >
      <input
        type="text"
        class="StyledTextInput-bqUxsy jwHYRf"
        id="select"
        autocomplete="off"
        style="cursor: pointer;"
        tabindex="-1"
        readonly=""
      />
    </div>
    <div
      class="StyledBox-YaZNy fnEUqy"
      direction="column"
    >
      <svg
        class="StyledIcon-hcpUvT fAeuhQ"
        width="24px"
        height="24px"
        viewBox="0 0 24 24"
        version="1.1"
        role="img"
        aria-label="FormDown"
      >
        <polyline
          fill="none"
          stroke="#000"
          stroke-width="2"
          points="18 9 12 15 6 9"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select mounts 2`] = `
<button
  class="StyledButton-qbvYY gWPVwe"
  aria-label="undefined"
  type="button"
>
  <div
    class="StyledBox-YaZNy kgWrYO"
    aria-hidden="true"
    direction="row"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-gOoAsL gCsbgz"
    >
      <input
        type="text"
        class="StyledTextInput-bqUxsy jwHYRf"
        id="select"
        autocomplete="off"
        style="cursor: pointer;"
        tabindex="-1"
        readonly=""
      />
    </div>
    <div
      class="StyledBox-YaZNy fnEUqy"
      direction="column"
    >
      <svg
        class="StyledIcon-hcpUvT fAeuhQ"
        width="24px"
        height="24px"
        viewBox="0 0 24 24"
        version="1.1"
        role="img"
        aria-label="FormDown"
      >
        <polyline
          fill="none"
          stroke="#000"
          stroke-width="2"
          points="18 9 12 15 6 9"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select mounts 3`] = `
<div
  class="StyledBox-YaZNy eLnczz"
  id="select-drop__select"
  direction="column"
>
  <div
    class="StyledBox-YaZNy cwgCmQ"
    overflow="auto"
    direction="column"
  >
    <div
      class="StyledBox-YaZNy iKIEeP"
      role="menubar"
      tabindex="-1"
      direction="column"
    >
      <button
        class="StyledButton-qbvYY bMFmk"
        tabindex="0"
        role="menuitem"
        type="button"
      >
        <div
          class="StyledBox-YaZNy cHUeZK"
          direction="column"
        >
          <span
            class="StyledText-dmaDlZ gTMzGY"
          >
            one
          </span>
        </div>
      </button>
      <button
        class="StyledButton-qbvYY bMFmk"
        tabindex="0"
        role="menuitem"
        type="button"
      >
        <div
          class="StyledBox-YaZNy cHUeZK"
          direction="column"
        >
          <span
            class="StyledText-dmaDlZ gTMzGY"
          >
            two
          </span>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Select mounts 4`] = `
"

.eLnczz {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  min-width: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media only screen and (min-width:700px) {
  .gWPVwe {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .bMFmk {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}"
`;

exports[`Select mounts 5`] = `
<div
  class="StyledBox-YaZNy iKIEeP"
  role="menubar"
  tabindex="-1"
  direction="column"
>
  <button
    class="StyledButton-qbvYY bMFmk"
    tabindex="0"
    role="menuitem"
    type="button"
  >
    <div
      class="StyledBox-YaZNy cHUeZK"
      direction="column"
    >
      <span
        class="StyledText-dmaDlZ gTMzGY"
      >
        one
      </span>
    </div>
  </button>
  <button
    class="StyledButton-qbvYY bMFmk"
    tabindex="0"
    role="menuitem"
    type="button"
  >
    <div
      class="StyledBox-YaZNy cHUeZK"
      direction="column"
    >
      <span
        class="StyledText-dmaDlZ gTMzGY"
      >
        two
      </span>
    </div>
  </button>
</div>
`;

exports[`Select mounts with complex options and children 1`] = `
<button
  class="StyledButton-qbvYY gWPVwe"
  aria-label="undefined"
  type="button"
>
  <div
    class="StyledBox-YaZNy kgWrYO"
    aria-hidden="true"
    direction="row"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-gOoAsL gCsbgz"
    >
      <input
        type="text"
        class="StyledTextInput-bqUxsy jwHYRf"
        id="select"
        autocomplete="off"
        style="cursor: pointer;"
        tabindex="-1"
        readonly=""
      />
    </div>
    <div
      class="StyledBox-YaZNy fnEUqy"
      direction="column"
    >
      <svg
        class="StyledIcon-hcpUvT fAeuhQ"
        width="24px"
        height="24px"
        viewBox="0 0 24 24"
        version="1.1"
        role="img"
        aria-label="FormDown"
      >
        <polyline
          fill="none"
          stroke="#000"
          stroke-width="2"
          points="18 9 12 15 6 9"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select mounts with complex options and children 2`] = `
<button
  class="StyledButton-qbvYY gWPVwe"
  aria-label="undefined"
  type="button"
>
  <div
    class="StyledBox-YaZNy kgWrYO"
    aria-hidden="true"
    direction="row"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-gOoAsL gCsbgz"
    >
      <input
        type="text"
        class="StyledTextInput-bqUxsy jwHYRf"
        id="select"
        autocomplete="off"
        style="cursor: pointer;"
        tabindex="-1"
        readonly=""
      />
    </div>
    <div
      class="StyledBox-YaZNy fnEUqy"
      direction="column"
    >
      <svg
        class="StyledIcon-hcpUvT fAeuhQ"
        width="24px"
        height="24px"
        viewBox="0 0 24 24"
        version="1.1"
        role="img"
        aria-label="FormDown"
      >
        <polyline
          fill="none"
          stroke="#000"
          stroke-width="2"
          points="18 9 12 15 6 9"
        />
      </svg>
    </div>
  </div>
</button>
`;

exports[`Select mounts with complex options and children 3`] = `
<div
  class="StyledBox-YaZNy eLnczz"
  id="select-drop__select"
  direction="column"
>
  <div
    class="StyledBox-YaZNy cwgCmQ"
    overflow="auto"
    direction="column"
  >
    <div
      class="StyledBox-YaZNy iKIEeP"
      role="menubar"
      tabindex="-1"
      direction="column"
    >
      <button
        class="StyledButton-qbvYY bMFmk"
        tabindex="0"
        role="menuitem"
        type="button"
      >
        <span>
          one
        </span>
      </button>
      <button
        class="StyledButton-qbvYY bMFmk"
        tabindex="0"
        role="menuitem"
        type="button"
      >
        <span>
          two
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`Select mounts with complex options and children 4`] = `
"

.eLnczz {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  min-width: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media only screen and (min-width:700px) {
  .gWPVwe {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .bMFmk {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}"
`;

exports[`Select mounts with search 1`] = `
<div
  class="StyledBox-YaZNy eLnczz"
  id="select-drop__select"
  direction="column"
>
  <div
    class="StyledBox-YaZNy dPqMSL"
    direction="column"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-gOoAsL gCsbgz"
    >
      <input
        type="search"
        class="StyledTextInput-bqUxsy ftwfKu"
        autocomplete="off"
        value=""
      />
    </div>
  </div>
  <div
    class="StyledBox-YaZNy cwgCmQ"
    overflow="auto"
    direction="column"
  >
    <div
      class="StyledBox-YaZNy iKIEeP"
      role="menubar"
      tabindex="-1"
      direction="column"
    >
      <button
        class="StyledButton-qbvYY bMFmk"
        tabindex="0"
        role="menuitem"
        type="button"
      >
        <div
          class="StyledBox-YaZNy cHUeZK"
          direction="column"
        >
          <span
            class="StyledText-dmaDlZ gTMzGY"
          >
            one
          </span>
        </div>
      </button>
      <button
        class="StyledButton-qbvYY bMFmk"
        tabindex="0"
        role="menuitem"
        type="button"
      >
        <div
          class="StyledBox-YaZNy cHUeZK"
          direction="column"
        >
          <span
            class="StyledText-dmaDlZ gTMzGY"
          >
            two
          </span>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Select mounts with search 2`] = `
"

.eLnczz {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  min-width: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media only screen and (min-width:700px) {
  .gWPVwe {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .bMFmk {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}"
`;

exports[`Select mounts with search 3`] = `
<input
  type="search"
  class="StyledTextInput-bqUxsy ftwfKu"
  autocomplete="off"
  value=""
/>
`;

exports[`Select mounts with search 4`] = `
<div
  class="StyledBox-YaZNy eLnczz"
  id="select-drop__select"
  direction="column"
>
  <div
    class="StyledBox-YaZNy dPqMSL"
    direction="column"
  >
    <div
      class="StyledTextInput__StyledTextInputContainer-gOoAsL gCsbgz"
    >
      <input
        type="search"
        class="StyledTextInput-bqUxsy ftwfKu"
        autocomplete="off"
        value="a"
      />
    </div>
  </div>
  <div
    class="StyledBox-YaZNy cwgCmQ"
    overflow="auto"
    direction="column"
  >
    <div
      class="StyledBox-YaZNy iKIEeP"
      role="menubar"
      tabindex="-1"
      direction="column"
    >
      <button
        class="StyledButton-qbvYY bMFmk"
        tabindex="0"
        role="menuitem"
        type="button"
      >
        <div
          class="StyledBox-YaZNy cHUeZK"
          direction="column"
        >
          <span
            class="StyledText-dmaDlZ gTMzGY"
          >
            one
          </span>
        </div>
      </button>
      <button
        class="StyledButton-qbvYY bMFmk"
        tabindex="0"
        role="menuitem"
        type="button"
      >
        <div
          class="StyledBox-YaZNy cHUeZK"
          direction="column"
        >
          <span
            class="StyledText-dmaDlZ gTMzGY"
          >
            two
          </span>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`Select mounts with search 5`] = `
"

.eLnczz {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  max-width: 100%;
  min-width: 0;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

@media only screen and (min-width:700px) {
  .gWPVwe {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}

@media only screen and (min-width:700px) {
  .bMFmk {
    -webkit-transition: 0.1s ease-in-out;
    transition: 0.1s ease-in-out;
  }
}"
`;
